--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group 'org.example'
@@ -9,12 +11,12 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation 'org.projectlombok:lombok'
-    implementation 'org.projectlombok:lombok:1.18.22'
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '3.1.2'
+dependencies {\
+    // https://mvnrepository.com/artifact/org.springframework/spring-webflux
+    implementation group: 'org.springframework', name: 'spring-webflux', version: '6.1.3'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
+    compileOnly 'org.projectlombok:lombok'
     implementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
